# opcuacs

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MEMORY.md  README.md  plan.md
.github/workflows/: frontend-ci.yml  rust-ci.yml
adr/: 001-ai-optimized-documentation.md  002-technology-stack.md
conductor/: product-guidelines.md  product-requirements.md  product.md  tech-stack.md  tracks.md
conductor/code_styleguides/: rust.md
conductor/tracks/implement_core_opc_ua_client_server_functionality_20260311/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/setup_cicd_20260311/: index.md  metadata.json  plan.md  spec.md
engine/: Cargo.toml  Dockerfile
engine/src/: main.rs
explorer/: Dockerfile  index.html  package-lock.json  package.json
explorer/src/: App.css  App.tsx  ConnectionManager.tsx  ServerInfo.tsx  TagViewer.tsx
memory/: MEMORY.md  conventions.md  decisions.md  environment.md
spec/: architecture.md
